<resources>
    <string name="app_name">Dishly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_slogan">Your culinary companion</string>
    <string name="H_enter_email">Email Address</string>
    <string name="H_enter_password">Password</string>
    <string name="divider_text">Or Go With</string>
    <string name="go_with_google">sign in with google</string>
    <string name="T_skip">Skip</string>
    <string name="T_login">login</string>
    <string name="T_sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="T_join_dishly">Join Dishly</string>
    <string name="registration_slogan">Start your culinary journey with personalized meal planning.</string>
    <string name="T_full_name">Full Name</string>
    <string name="T_create_acount">Create Acount</string>
    <string name="T_sign_up_whit_google">Sign up whit google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="T_guest">Guest</string>
    <string name="T_meal_of_the_day">Meal of the day</string>
    <string name="T_cook_now">Cook Now</string>
    <string name="T_user_icon">user icon</string>
    <string name="T_ingredients">Ingredients</string>
    <string name="T_instructions">Instructions</string>
    <string name="T_video_tutorial">Video Tutorial</string>
    <string name="T_search_recipes_ingredients">Search recipes, ingredients...</string>
    <string name="T_ingredient">Ingredient</string>
    <string name="T_category">Category</string>
    <string name="T_country">Country</string>
    <string name="T_what_are_you_craving">What are you craving?</string>
    <string name="T_search_recipes">Search recipes...</string>
    <string name="T_our_meals">Our Meals</string>
    <string name="default_web_client_id">368011878400-bh20lmt98o1l2s508celbrb3qv6qk5v8.apps.googleusercontent.com</string>
    <string name="T_loout">Loout</string>
    <string name="T_add_to_favorites">Add to favorit\n</string>
    <string name="offline_indicator">Offline indicator</string>
    <string name="you_are_offline">You\'re offline - Viewing cached data</string>
    <string name="meals_for_selected_date">Meals for Selected Date</string>
    <string name="no_meals_scheduled">No meals scheduled for this day</string>
    <string name="meal_image">Meal Image</string>
    <string name="remove_meal">Remove meal</string>
    <string name="add_meal_to_calendar">Add meal to calendar</string>
    <string name="meal_added_to_calendar">Meal added to calendar</string>
    <string name="meal_removed_from_calendar">Meal removed from calendar</string>
</resources>