<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".RegistrationFragment">


    <ImageView
        android:id="@+id/registrationLogo"
        android:layout_width="171dp"
        android:layout_height="161dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_dishly_logo" />

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/T_join_dishly"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registrationSlogan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/registration_slogan"
      />

    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationSlogan"
        android:layout_marginTop="20dp"
        android:text="@string/T_full_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registrationFullNameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fullNameText"
        android:layout_marginTop="5dp"
        android:autofillHints="name"
        android:background="@drawable/bg_input_rounded"
        android:hint="@string/T_full_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationFullNameInput"
        android:layout_marginTop="20dp"
        android:text="@string/H_enter_email"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registrationEmailInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/emailText"
        android:layout_marginTop="5dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_input_rounded"
        android:hint="@string/H_enter_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationEmailInput"
        android:layout_marginTop="20dp"
        android:text="@string/H_enter_password"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/passwordText"
        android:layout_marginTop="5dp"
        android:hint="@string/H_enter_password"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="outline"

        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxStrokeColor="@color/btn_background"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registrationPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/T_create_acount"
        android:textColor="@color/black"
        android:layout_below="@id/passwordBox"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/logo_color"

        />



    <!--   custom  Divider -->
    <LinearLayout
        android:id="@+id/orDividerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/btn_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/divider_text"
            android:textColor="@color/logo_color"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/btn_background" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SinUpWithGoogleButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/orDividerLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/T_sign_up_whit_google"
        android:textColor="@color/black"

        app:backgroundTint="@color/white"
        app:cornerRadius="50dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="8dp"

        app:iconSize="20dp"
        app:iconTint="@null"
        app:strokeColor="@color/btn_background"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SinUpWithGoogleButton"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"

            />

        <TextView
            android:id="@+id/registrationToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/T_login"
            android:textColor="@color/logo_color" />


    </LinearLayout>


</RelativeLayout>