<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_background"
    tools:context=".view.mealDetailsScreen.MealDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/btn_background"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detailsMealImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <View
                    android:id="@+id/shadowView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/details_bottom_shadow" />

                <TextView
                    android:id="@+id/detailsMealName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/shadowView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="60dp"
                    android:gravity="center"
                    android:textColor="@color/always_white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/detailsAreaIconAndCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detailsMealName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-50dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_bg"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/detailsAreaIcon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:scaleType="centerCrop"
                            android:visibility="gone"
                            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                            app:strokeColor="@color/white"
                            app:strokeWidth="1dp" />

                        <TextView
                            android:id="@+id/detailsAreaName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/always_black" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/detailsCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/text_bg"
                        android:padding="10dp"
                        android:textColor="@color/always_black" />
                </LinearLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/detailsIngredientsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/T_ingredients"
                android:textColor="@color/always_white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detailsIngredientsItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/detailsIngredientsText"
                android:layout_alignParentEnd="true"
                android:textColor="@color/gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailsIngredientsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailsIngredientsText"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/detailsInstructionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailsIngredientsRecyclerView"
                android:layout_marginTop="20dp"
                android:text="@string/T_instructions"
                android:textColor="@color/always_white"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailsInstructionRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailsInstructionsText"
                android:layout_marginTop="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            <TextView
                android:id="@+id/videoTutorialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailsInstructionRecyclerView"
                android:layout_marginTop="20dp"
                android:text="@string/T_video_tutorial"
                android:textColor="@color/always_white"
                android:textSize="20sp" />


            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/videoTutorialText"

                app:videoId="XTIxgbEeJ84"
                app:autoPlay="true" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>